<resources>
    <string name="app_name">Sportdy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_game">Find Game</string>
    <string name="my_game">My Game</string>
    <string name="history">Game History</string>
    <string name="game">Sport Game</string>
    <string name="chat">Chat</string>
    <string name="friend">Friends</string>
    <string name="community">Community</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="nav_drawer_open">Navigation Drawer Open</string>
    <string name="nav_drawer_close">Navigation Drawer Close</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tktiong">TkTioNG</string>
    <string name="acc_img">Account Image</string>

    <string name="host_prompt">Host A Game</string>
    <array name="sports">
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Baseball</item>
        <item>Hockey</item>
        <item>Football</item>
    </array>
    <string name="date">Date : </string>
    <string name="time">Time : </string>
    <string name="venue">Venue : </string>
    <string name="description">Description : </string>
    <string name="post">Post</string>

</resources>
