<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constaintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game.HostGameFragment">

    <TextView
        android:id="@+id/textViewSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSports"
        app:layout_constraintStart_toStartOf="@+id/spinnerSports" />

    <Spinner
        android:id="@+id/spinnerSports"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="@dimen/txtMargin"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:entries="@array/sports"
        android:prompt="@string/host_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        tools:text="@string/date" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="@dimen/txtMargin"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="Enter Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSports" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="@dimen/txtMargin"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="Enter Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTime"
        app:layout_constraintStart_toStartOf="@+id/editTextTime" />

    <TextView
        android:id="@+id/textViewVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextVenue"
        app:layout_constraintStart_toStartOf="@+id/editTextVenue" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="@dimen/txtMargin"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVenue" />

    <EditText
        android:id="@+id/editTextVenue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>